add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -24,30 +24,26 @@
         >
       </a>
 
-      <div class="container">
-        <div class="header-icons">
-          <a href="#" class="header-burger-menu">
-            <img
-              src="./images/burger-menu.svg"
-              alt="burger-menu"
-              class="header-burger-menu-icon"
-            >
-          </a>
+      <div class="header-icons">
+        <a href="#menu" class="header-burger-menu">
+          <img
+            src="./images/burger-menu.svg"
+            alt="burger-menu"
+            class="header-burger-menu-icon"
+          >
+        </a>
 
-          <a href="#" class="header-logo">
-            <img
-              src="./images/logo.svg"
-              alt="logo"
-              class="header-logo-icon"
-            >
-          </a>
-        </div>
+        <a href="#" class="header-logo">
+          <img
+            src="./images/logo.svg"
+            alt="logo"
+            class="header-logo-icon"
+          >
+        </a>
       </div>
-    </header>
 
-    <main class="main">
-      <div class="container">
-        <section class="art-museum">
+      <div class="art-museum">
+        <div class="art-museum-title-and-link">
           <p class="art-museum-title">ХУДОЖНІЙ МУЗЕЙ</p>
 
           <a href="#" class="art-museum-link">
@@ -57,9 +53,65 @@
               class="art-museum-link-img"
             >
           </a>
-        </section>
+        </div>
       </div>
 
+
+    </header>
+
+    <aside class="aside" id="menu">
+      <div class="container">
+        <div class="aside-top-bar">
+          <a href="#" class="aside-top-bar-link">
+            <img
+              src="./images/icon-close-aside.png"
+              alt="icon-close"
+              class="aside-top-bar-link-icon"
+            >
+          </a>
+
+          <nav class="aside-top-bar-nav">
+            <ul class="aside-top-bar-nav-list aside-top-bar-nav-left">
+              <li class="aside-top-bar-nav-item">
+                <a href="#" class="aside-top-bar-nav-link">Галерея</a>
+              </li>
+
+              <li class="aside-top-bar-nav-item">
+                <a href="#" class="aside-top-bar-nav-link">Виставки та події</a>
+              </li>
+            </ul>
+
+            <ul class="aside-top-bar-nav-list aside-top-bar-nav-right">
+              <li class="aaside-top-bar-nav-item">
+                <a href="#" class="aside-top-bar-nav-link">Про Нас</a>
+              </li>
+
+              <li class="aside-top-bar-nav-item">
+                <a href="#" class="aside-top-bar-nav-link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="aside-schedule">
+          <p class="aside-schedule-title">Графік роботи</p>
+          <p class="aside-schedule-description">
+            <strong>12:00 — 20:00</strong> середа<br>
+            <strong>12:00 — 20:00</strong> четвер<br>
+            <strong>12:00 — 20:00</strong> п’ятниця<br>
+            <strong>11:00 — 19:00</strong> субота<br>
+            <strong>11:00 — 19:00</strong> неділя<br><br>
+
+            Вихідні понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+    </aside>
+
+    <div class="overlay"></div>
+
+    <main class="main">
       <section class="actual-events">
         <div class="container">
           <p class="actual-events-title">Актуальні події</p>
@@ -171,31 +223,123 @@
           >
         </a>
 
+        <div class="container-for-all-form">
+          <p class="sign-up-title">Підписка</p>
+          <p class="sign-up-description">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
-        <div class="container-for-form">
-          <form
-          class="sign-up-contact-form"
-          action="#"
-          method="post"
-          onsubmit="this.reset(); window.scrollTo({top: 0, behavior: 'smooth'}); return false;"
-          >
-            <input
-              class="sign-up-contact-form-email"
-              type="email"
-              name="email"
-              placeholder="E-mail"
-              required
+          <div class="container-for-form-and-square">
+            <form
+            class="sign-up-contact-form"
+            action="#"
+            method="post"
+            onsubmit="this.reset(); window.scrollTo({top: 0, behavior: 'smooth'}); return false;"
             >
-          </form>
+              <input
+                class="sign-up-contact-form-email"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+              >
+            </form>
 
-          <a href="#" class="sign-up-red-box">
-            <img src="./images/sign-up-red-box-arrow.png" alt="arrow" class="sign-up-red-box-arrow">
-          </a>
+            <a href="#" class="sign-up-red-box">
+              <img
+                src="./images/sign-up-red-box-arrow.png"
+                alt="arrow"
+                class="sign-up-red-box-arrow"
+              >
+            </a>
+          </div>
         </div>
 
       </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-logos">
+          <a href="#" class="footer-logo">
+            <img
+              src="./images/logo.svg"
+              alt="logo"
+              class="footer-logo-icon"
+            >
+          </a>
+
+          <div class="footer-socials">
+            <a href="#" class="footer-socials-facebook">
+              <img
+                src="./images/facebook-logo.png"
+                alt="facebook"
+                class="footer-socials-facebook-logo"
+              >
+            </a>
+
+            <a href="#" class="footer-socials-instagram">
+              <img
+                src="./images/instagram-logo.png"
+                alt="instagram"
+                class="footer-socials-instagram-logo"
+              >
+            </a>
+          </div>
+        </div>
+
+        <div class="footer-schedule-and-contacts">
+          <div class="footer-schedule">
+            <p class="footer-schedule-title">Графік роботи</p>
+            <p class="footer-schedule-description">
+              <strong>12:00 — 20:00</strong> <br>середа<br>
+              <strong>12:00 — 20:00</strong> <br>четвер<br>
+              <strong>12:00 — 20:00</strong> <br>п’ятниця<br>
+              <strong>11:00 — 19:00</strong> <br>субота<br>
+              <strong>11:00 — 19:00</strong> <br>неділя<br><br>
+
+              Вихідні понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+
+          </div>
+
+          <div class="footer-contacts">
+            <p class="footer-contacts-title">Контакти:</p>
+            <p class="footer-contacts-description">
+              вул. М. Грушевського, 6; Київ, 01001
+              тел. +38 (044) 278-13-57
+              факс +38 (044) 278-74-54
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+        </div>
+
+        <nav class="footer-nav">
+          <ul class="footer-nav-list footer-nav-left">
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Галерея</a>
+            </li>
+
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Виставки та події</a>
+            </li>
+          </ul>
+
+          <ul class="footer-nav-list footer-nav-right">
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Про Нас</a>
+            </li>
+
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="footer-bottom-block">
+          <p class="footer-bottom-block-design">Designed by Zhyriada Marina</p>
+          <p class="footer-bottom-block-copyright">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
