fix links and cursor

--- a/src/index.html
+++ b/src/index.html
@@ -418,6 +418,7 @@
                 <a
                   class="footer__link text-normal color--black"
                   href="https://goo.gl/maps/Dodv9GL3bjoFouAb9"
+                  target="_blank"
                 >
                   вул. М. Грушевського, 6; Київ, 01001
                 </a>
