fix links and cursor

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
             <img
               class="header__background"
               src="./images/museum-picture.png"
-              alt="Museum"
+              alt="museum"
             />
             <h1 class="header__title header-1">художній музей</h1>
             <div class="header__button button">
