--- a/src/index.html
+++ b/src/index.html
@@ -331,11 +331,12 @@
                     autocomplete="email"
                     id="email"
                   />
-                  <input
+                  <div
                     type="submit"
                     class="subscribe__input__field subscribe__input__field--type--submit button button__link__icon icon icon--arrow--color--black button__link__icon--color--red"
                     value=" "
-                  />
+                    onclick="submitForm()"
+                  ></div>
                 </form>
               </div>
             </div>
