--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
               <div class="event__image-container">
                 <img
                   src="./images/paintings/crimea.png"
-                  alt="Crimea bank"
+                  alt="Crimea Bank"
                   class="event__image"
                 />
               </div>
