--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
               <div class="event__image-container">
                 <img
                   src="./images/paintings/crimea.png"
-                  alt="Crimea Bank"
+                  alt="Crimea bank"
                   class="event__image"
                 />
               </div>
@@ -331,12 +331,11 @@
                     autocomplete="email"
                     id="email"
                   />
-                  <div
+                  <input
                     type="submit"
                     class="subscribe__input__field subscribe__input__field--type--submit button button__link__icon icon icon--arrow--color--black button__link__icon--color--red"
                     value=" "
-                    onclick="submitForm()"
-                  ></div>
+                  />
                 </form>
               </div>
             </div>
