--- a/src/index.html
+++ b/src/index.html
@@ -331,12 +331,11 @@
                     autocomplete="email"
                     id="email"
                   />
-                  <div
+                  <button
                     type="submit"
                     class="subscribe__input__field subscribe__input__field--type--submit button button__link__icon icon icon--arrow--color--black button__link__icon--color--red"
                     value=" "
-                    onclick="submitForm()"
-                  ></div>
+                  ></button>
                 </form>
               </div>
             </div>
