--- a/src/index.html
+++ b/src/index.html
@@ -398,148 +398,108 @@
       </div>
     </main>
 
-    <div class="scale">
-      <footer class="footer">
-        <div class="container">
-          <div class="footer__wrapper">
-            <div class="footer__logo">
-              <h2 class="header__all--text">
-                na
-                <br />
-                mu
-              </h2>
+    <footer class="footer" id="contacts">
 
-              <div class="footer__un">
-                <a
-                  href="https://www.facebook.com/namu.museum/?locale=ru_RU"
-                  target="_blank"
-                >
-                  <img
-                    class="footer__facebook"
-                    src="././images/facebook-letter-logo.png"
-                    alt="collection"
-                  />
-                </a>
-                <a
-                  href="https://www.instagram.com/namu.museum/"
-                  target="_blank"
-                >
-                  <img
-                    class="footer__insta footer__un--right"
-                    src="././images/instagram (3).png"
-                    alt="collection"
-                  />
-                </a>
-              </div>
-            </div>
-
-            <div
-              class="footer__menu"
-              id="contacts"
+      <div class="footer__logo">
+        <h2 class="header__all--text">
+          na
+          <br />
+          mu
+        </h2>
+        <div class="footer__un">
+          <div class="footer__un--f">
+            <a
+              href="https://www.facebook.com/namu.museum/?locale=ru_RU"
+              target="_blank"
             >
-              <div class="menu__content--schedule footer__menu--schedule">
-                <div>Графік роботи</div>
-                <br />
-                <div>
-                  <span class="menu__content--bold">12:00 — 20:00</span>
-                  середа
-                </div>
-                <div>
-                  <span class="menu__content--bold">12:00 — 20:00</span>
-                  четвер
-                </div>
-                <div>
-                  <span class="menu__content--bold">12:00 — 20:00</span>
-                  п’ятниця
-                </div>
-                <div>
-                  <span class="menu__content--bold">11:00 — 19:00</span>
-                  субота
-                </div>
-                <div>
-                  <span class="menu__content--bold">11:00 — 19:00</span>
-                  неділя
-                </div>
-                <div class="menu__content--schedule2 footer__menu--schedule2">
-                  <br />
-                  <div>
-                    <span class="menu__content--bold">Вихідні:</span>
-                    понеділок, вівторок
-                  </div>
-                  <div>Каса припиняє роботу за 1 годину</div>
-                  <div>до закриття музею</div>
-                </div>
-              </div>
-              <div class="footer__menu--contact">
-                <div>Контакти:</div>
-                <br />
-                <div>
-                  вул. М. Грушевського, 6; Київ, 01001
-                  <br />
-                  тел. +38 (044) 278-13-57
-                  <br />
-                  факс +38 (044) 278-74-54
-                  <br />
-                  e-mail: info@namu.kiev.ua
-                </div>
-              </div>
-              <hr class="footer__hr" />
-              <div class="menu__content1 footer__bottom">
-                <nav class="nav menu__nav">
-                  <ul class="nav__list">
-                    <div class="menu__content1--c1">
-                      <li class="nav__item footer__item1">
-                        <a
-                          class="nav__link__m footer__link__m"
-                          href="#galery"
-                        >
-                          Галерея
-                        </a>
-                        <a
-                          class="nav__link__d footer__link__d"
-                          href="#galeryD"
-                        >
-                          Галерея
-                        </a>
-                      </li>
-                      <li class="nav__item">
-                        <a
-                          class="nav__link footer__link"
-                          href="#exhidition"
-                        >
-                          Виставки та події
-                        </a>
-                      </li>
-                    </div>
-                    <div class="menu__content1--c2">
-                      <li class="nav__item">
-                        <a
-                          class="nav__link footer__link"
-                          href="#about"
-                        >
-                          Про Нас
-                        </a>
-                      </li>
-                      <li class="nav__item">
-                        <a
-                          class="nav__link footer__link"
-                          href="#contacts"
-                        >
-                          Контакти
-                        </a>
-                      </li>
-                    </div>
-                  </ul>
-                </nav>
-              </div>
-            </div>
+              <img
+                class="footer__facebook"
+                 src="././images/facebook-letter-logo.png"
+                alt="collection"
+              />
+            </a>
+          </div>
+          <div class="footer__un--i">
+            <a
+              href="https://www.instagram.com/namu.museum/"
+              target="_blank"
+                     >
+              <img
+                class="footer__insta"
+                src="././images/instagram (3).png"
+                alt="collection"
+              />
+            </a>
           </div>
         </div>
-        <div class="footik">
-          <div class="box">Copyright © 2019. All Rights Reserved.</div>
-          <div class="box">Designed by Zhyriada Marina</div>
+      </div>
+
+      <div class="menu__content--schedule footer__menu--schedule">
+        <div>Графік роботи</div>
+        <br />
+        <div>
+          <span class="menu__content--bold">12:00 — 20:00</span>
+            середа
         </div>
-      </footer>
+        <div>
+          <span class="menu__content--bold">12:00 — 20:00</span>
+            четвер
+        </div>
+        <div>
+          <span class="menu__content--bold">12:00 — 20:00</span>
+          п’ятниця
+        </div>
+        <div>
+          <span class="menu__content--bold">11:00 — 19:00</span>
+          субота
+        </div>
+        <div>
+          <span class="menu__content--bold">11:00 — 19:00</span>
+            неділя
+        </div>
+
+        <br />
+        <div>
+          <span class="menu__content--bold">Вихідні:</span>
+            понеділок, вівторок
+        </div>
+        <div>Каса припиняє роботу за 1 годину</div>
+        <div>до закриття музею</div>
+
+      </div>
+
+      <div class="footer__menu--contact">
+        <div>Контакти:</div> <br>
+        <div class="footer__menu--adress"><a href="http://surl.li/qgjtwc" class="footer__menu--adress">вул. М. Грушевського, 6; Київ, 01001</a></div>
+        <div class="footer__menu--phone">
+          <a href="tel:+38 044 278-13-57" class="footer__menu--phone"> тел. +38 (044) 278-13-57</a>
+        </div>
+        <div class="footer__menu--phone1"><a href="tel:+38 044 278-13-57" class="footer__menu--phone1"> факс +38 (044) 278-74-54</a></div>
+        <div class="footer__menu--email"><a href="email@" class="footer__menu--email">e-mail: info@namu.kiev.ua</a></div>
+      </div>
+
+      <hr class="footer__hr" />
+
+      <div class="menu__content1--c1">
+        <div class="footer__link__m"><a href="#galery" class="nondecor">Галерея</a></div>
+        <div  class="footer__link__d"><a href="#galeryD" class="nondecor">Галерея</a></div>
+        <div class="footer__link__a"><a href="#exhidition" class="nondecor">Виставки та події</a></div>
+      </div>
+      <div class="menu__content1--c2">
+        <div class="footer__link__b"><a href="#about" class="nondecor">Про нас</a></div>
+        <div class="footer__link__c"><a href="#contacts" class="nondecor">Контакти</a></div>
+      </div>
+
+    </footer>
+
+    <div class="footik">
+      <div class="box">Copyright © 2019. All Rights Reserved.</div>
+      <div class="box">Designed by Zhyriada Marina</div>
     </div>
+
+
+
+
+
   </body>
 </html>
