--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
       class="page__menu menu"
       id="menu"
     >
-      <div class="page__container menu__grid-wrapper">
+      <div class="menu__grid-wrapper">
         <a
           href="#"
           class="icon icon__block icon--close"
@@ -219,6 +219,84 @@
 
             <h3 class="panorama__title">Від класицизму до романтизму</h3>
           </div>
+        </div>
+      </section>
+
+      <section class="page__container gallery">
+        <h2 class="gallery__title">Галерея</h2>
+
+        <div class="gallery__container">
+          <ul class="gallery__container-list">
+            <li class="gallery__image-1">
+              <img
+                src="./images/gallery/gallery-1.png"
+                alt="Gallery image"
+                class="gallery__image"
+              />
+            </li>
+            <li class="gallery__image-2">
+              <picture>
+                <source
+                  media="(max-width: 1279px)"
+                  srcset="./images/gallery/tablet/gallery-2.png"
+                />
+                <img
+                  src="./images/gallery/gallery-2.png"
+                  alt="Gallery image"
+                  class="gallery__image"
+                />
+              </picture>
+            </li>
+            <li class="gallery__image-3">
+              <picture>
+                <source
+                  media="(max-width: 1279px)"
+                  srcset="./images/gallery/tablet/gallery-3.webp"
+                />
+                <img
+                  src="./images/gallery/gallery-3.png"
+                  alt="Gallery image"
+                  class="gallery__image"
+                />
+              </picture>
+            </li>
+            <li class="gallery__image-4">
+              <img
+                src="./images/gallery/gallery-4.png"
+                alt="Gallery image"
+                class="gallery__image"
+              />
+            </li>
+          </ul>
+        </div>
+
+        <div class="gallery__controls">
+          <ul class="gallery__controls-list">
+            <li class="gallery__controll-wrap-btn">
+              <button
+                class="gallery__controls-btn"
+                data-index="0"
+              ></button>
+            </li>
+            <li class="gallery__controll-wrap-btn">
+              <button
+                class="gallery__controls-btn"
+                data-index="1"
+              ></button>
+            </li>
+            <li class="gallery__controll-wrap-btn">
+              <button
+                class="gallery__controls-btn"
+                data-index="2"
+              ></button>
+            </li>
+            <li class="gallery__controll-wrap-btn">
+              <button
+                class="gallery__controls-btn"
+                data-index="3"
+              ></button>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
