add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="./styles/style.scss"/>
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="header">
       <img src="./images/header-background.svg" class="header-background">
         <div class="container">
           <div class="header__img">
-            <a href="#aside" class="header__burger-menu"></a>
+            <a href="#aside" class="header__burger-menu" onclick="document.body.classList.add('no-scroll')"></a>
             <img src="./images/logo/logo.png" class="header__logo">
           </div>
         </div>
@@ -42,23 +42,23 @@
         <div class="aside__wrapper">
           <div class="aside__container-navigatioin">
             <div class="aside__icon">
-              <a href="#header" class="aside__icon-close"></a>
+              <a href="#header" class="aside__icon-close" onclick="document.body.classList.remove('no-scroll')"></a>
             </div>
             <div class="aside__navigation">
               <ul class="aside__list">
                 <li class="aside__item">
-                  <a href="#" class="aside__link">Галерея</a>
+                  <a href="#slider" class="aside__link" onclick="document.body.classList.remove('no-scroll')">Галерея</a>
                 </li>
                 <li class="aside__item">
-                  <a href="#" class="aside__link">Виставки та події</a>
+                  <a href="#events" class="aside__link" onclick="document.body.classList.remove('no-scroll')">Виставки та події</a>
                 </li>
               </ul>
               <ul class="aside__list">
                 <li class="aside__item">
-                  <a href="#" class="aside__link">Про Нас</a>
+                  <a href="#subscription" class="aside__link" onclick="document.body.classList.remove('no-scroll')">Про Нас</a>
                 </li>
                 <li class="aside__item">
-                  <a href="#" class="aside__link">Контакти</a>
+                  <a href="#contacts" class="aside__link" onclick="document.body.classList.remove('no-scroll')">Контакти</a>
                 </li>
               </ul>
             </div>
@@ -85,7 +85,7 @@
     <div class="overlay" id="overlay"></div>
     
     <main class="main">
-      <section class="events">
+      <section class="events" id="events">
         <div class="container">
           <h2 class="events__title">Актуальні події</h2>
           <div class="events__wrapper">
@@ -131,7 +131,7 @@
       <div class="main-img__container">
         <div class="main-img"></div>
       </div>
-      <section class="advert">
+      <section class="advert" id="advert">
         <div class="advert__container">
           <div class="advert__wrapper">
             <p class="advert__name">Лекція</p>
@@ -140,7 +140,7 @@
           <p class="advert__title">Від класицизму до романтизму</p>
         </div>
       </section>
-      <section class="slider">
+      <section class="slider" id="slider">
         <h2 class="slider__title">Галерея</h2>
         <div class="slider-container">
           <input type="radio" name="slider-wrapper" id="slide1" checked>
@@ -164,7 +164,7 @@
         </div>
       </section>
 
-      <section class="subscription">
+      <section class="subscription" id="subscription">
         <div class="subscription__content">
           <h2 class="subscription__title">Підписка</h2>
           <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
@@ -205,7 +205,7 @@
               </div>
             </div>
           </div>
-          <div class="footer-contacts">
+          <div class="footer-contacts" id="contacts">
             <h2 class="footer-contacts__title">Контакти:</h2>
             <div class="footer-contacts__links">
               <a href="https://www.google.com/maps?q=вул.+М.+Грушевського,+6;+Київ,+01001" class="footer-contacts__link" target="_blank" rel="noopener noreferrer">вул. М. Грушевського, 6; Київ, 01001</a>
@@ -224,18 +224,18 @@
           <hr class="footer__line">
             <ul class="footer__list footer__list1">
               <li class="footer__item">
-                <a href="#" class="footer__link">Галерея</a>
+                <a href="#slider" class="footer__link">Галерея</a>
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link">Виставки та події</a>
+                <a href="#events" class="footer__link">Виставки та події</a>
               </li>
             </ul>
             <ul class="footer__list footer__list2">
               <li class="footer__item">
-                <a href="#" class="footer__link">Про Нас</a>
+                <a href="#subscription" class="footer__link">Про Нас</a>
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link">Контакти</a>
+                <a href="#contacts" class="footer__link">Контакти</a>
               </li>
             </ul>
             <div class="designed-by">
