--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,9 @@
   </head>
 
   <body>
-    <!-- #region header -->
-    <header class="page__left-padding header">
+    <header
+      class="page__left-padding page__section-space page__header-space-for-mobile header"
+    >
       <div class="header__container">
         <a
           href="#menu"
@@ -59,8 +60,6 @@
         </div>
       </div>
     </header>
-    <!-- #endregion -->
-    <!-- #region menu-->
     <aside
       class="page__menu menu"
       id="menu"
@@ -71,7 +70,7 @@
           class="icon icon__block icon--close"
         ></a>
 
-        <ul class="menu__nav">
+        <ul class="menu__nav nav">
           <li class="menu__item">
             <a
               href="#gallery"
@@ -108,36 +107,46 @@
           </li>
         </ul>
 
-        <div class="menu__devider"></div>
+        <hr class="menu__separator separator separator--menu" />
 
-        <div class="menu__schedule">
-          <h4 class="menu__shedule-title">Графік роботи</h4>
-          <ul class="menu__schedule-list">
-            <li class="menu__schedule-item">
-              <span class="menu__t-bold">12:00 — 20:00</span>
+        <div class="menu__schedule schedule">
+          <h4 class="schedule__title">Графік роботи</h4>
+          <ul class="schedule__list">
+            <li class="schedule__text">
+              <span class="schedule__text schedule__text--bold">
+                12:00 — 20:00
+              </span>
               середа
             </li>
-            <li class="menu__schedule-item">
-              <span class="menu__t-bold">12:00 — 20:00</span>
+            <li class="schedule__text">
+              <span class="schedule__text schedule__text--bold">
+                12:00 — 20:00
+              </span>
               четвер
             </li>
-            <li class="menu__schedule-item">
-              <span class="menu__t-bold">12:00 — 20:00</span>
+            <li class="schedule__text">
+              <span class="schedule__text schedule__text--bold">
+                12:00 — 20:00
+              </span>
               п'ятниця
             </li>
-            <li class="menu__schedule-item">
-              <span class="menu__t-bold">11:00 — 19:00</span>
+            <li class="schedule__text">
+              <span class="schedule__text schedule__text--bold">
+                11:00 — 19:00
+              </span>
               субота
             </li>
-            <li class="menu__schedule-item">
-              <span class="menu__t-bold">11:00 — 19:00</span>
+            <li class="schedule__text">
+              <span class="schedule__text schedule__text--bold">
+                11:00 — 19:00
+              </span>
               неділя
             </li>
           </ul>
         </div>
 
-        <p class="menu__schedule-describe menu__schedule-item">
-          <span class="menu__t-bold">Вихідні:</span>
+        <p class="menu__schedule-describe schedule schedule__text">
+          <span class="schedule__text schedule__text--bold">Вихідні:</span>
           понеділок, вівторок
           <br />
           Каса припиняє роботу за 1 годину до
@@ -146,7 +155,6 @@
         </p>
       </div>
     </aside>
-    <!-- #endregion-->
 
     <main class="main">
       <section
@@ -207,8 +215,7 @@
           </div>
         </div>
       </section>
-
-      <section class="panorama">
+      <section class="page__section-space panorama">
         <div class="panorama__bg"></div>
         <div class="panorama__container">
           <div class="panorama__description">
@@ -222,13 +229,17 @@
         </div>
       </section>
 
-      <section class="page__container gallery">
+      <section
+        class="page__container page__section-space gallery"
+        id="gallery"
+      >
         <h2 class="gallery__title">Галерея</h2>
 
         <div class="gallery__container">
           <ul class="gallery__container-list">
             <li class="gallery__image-1">
               <img
+                draggable="false"
                 src="./images/gallery/gallery-1.png"
                 alt="Gallery image"
                 class="gallery__image"
@@ -241,6 +252,7 @@
                   srcset="./images/gallery/tablet/gallery-2.png"
                 />
                 <img
+                  draggable="false"
                   src="./images/gallery/gallery-2.png"
                   alt="Gallery image"
                   class="gallery__image"
@@ -254,6 +266,7 @@
                   srcset="./images/gallery/tablet/gallery-3.webp"
                 />
                 <img
+                  draggable="false"
                   src="./images/gallery/gallery-3.png"
                   alt="Gallery image"
                   class="gallery__image"
@@ -262,6 +275,7 @@
             </li>
             <li class="gallery__image-4">
               <img
+                draggable="false"
                 src="./images/gallery/gallery-4.png"
                 alt="Gallery image"
                 class="gallery__image"
@@ -299,7 +313,215 @@
           </ul>
         </div>
       </section>
+
+      <section class="subscribe">
+        <div class="subscribe__container">
+          <div class="subscribe__bg">
+            <div class="subscribe__description">
+              <h3 class="subscribe__title">Підписка</h3>
+              <p class="subscribe__info">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+
+              <form
+                class="subscribe__form"
+                action="#"
+                method="post"
+                enctype="application/x-www-form-urlencoded"
+              >
+                <label>
+                  <input
+                    required
+                    id="about-us"
+                    type="email"
+                    name="email"
+                    class="subscribe__field"
+                    placeholder="E-mail"
+                  />
+                </label>
+                <button
+                  class="subscribe__submit-btn"
+                  type="submit"
+                >
+                  <img
+                    src="./images/icon/right-arrow.svg"
+                    alt="Arrow-right"
+                  />
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer class="page__container footer">
+      <div class="footer__container">
+        <div class="footer__grid-container">
+          <div class="footer__social-container">
+            <h1 class="footer__title">
+              NA
+              <br />
+              MU
+            </h1>
+
+            <div class="footer__icons">
+              <a
+                href="https://www.linkedin.com/in/volodimir-murskyi-b54b45293/"
+                target="_blank"
+              >
+                <img
+                  src="./images/icon/facebook.svg"
+                  alt="Faceboock"
+                  class="footer__icon"
+                />
+              </a>
+              <a
+                href="https://github.com/mrsvolodya?tab=repositories"
+                target="_blank"
+              >
+                <img
+                  src="./images/icon/instagram.svg"
+                  alt="Instagram"
+                  class="footer__icon"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__schedule schedule">
+            <h3 class="schedule__title">Графік роботи</h3>
+
+            <ul class="schedule__list">
+              <li class="schedule__text">
+                <span class="schedule__text schedule__text--bold">
+                  12:00 — 20:00
+                </span>
+                середа
+              </li>
+              <li class="schedule__text">
+                <span class="schedule__text schedule__text--bold">
+                  12:00 — 20:00
+                </span>
+                четвер
+              </li>
+              <li class="schedule__text">
+                <span class="schedule__text schedule__text--bold">
+                  12:00 — 20:00
+                </span>
+                п’ятниця
+              </li>
+              <li class="schedule__text">
+                <span class="schedule__text schedule__text--bold">
+                  11:00 — 19:00
+                </span>
+                субота
+              </li>
+              <li class="schedule__text">
+                <span class="schedule__text schedule__text--bold">
+                  11:00 — 19:00
+                </span>
+                неділя
+              </li>
+            </ul>
+            <br />
+            <p class="footer__schedule-description">
+              <span class="schedule__text schedule__text--bold">Вихідні:</span>
+              понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
+              музею
+            </p>
+          </div>
+
+          <div
+            class="footer__contacts"
+            id="contacts"
+          >
+            <h3 class="footer__contacts-title">Контакти:</h3>
+            <div class="footer__contacts-text">
+              <a
+                class="footer__contacts-link"
+                target="_blank"
+                href="https://www.google.com/maps/@50.4497292,30.5310904,3a,75y,209.25h,90t/data=!3m6!1e1!3m4!1sVxna-JFql-Z8iHCJV7Jjog!2e0!7i13312!8i6656?coh=205409&entry=ttu"
+              >
+                вул. М. Грушевського, 6;
+                <br />
+                Київ, 01001
+              </a>
+              <a
+                class="footer__contacts-link"
+                href="tel:+380442781357"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+              <a
+                class="footer__contacts-link"
+                href="fax:+380442787454"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+              <a
+                class="footer__contacts-link"
+                href="mailto:info@namu.kiev.ua"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+
+          <button class="footer__scroll-to-top">
+            <img
+              src="./images/icon/arrow-up.svg"
+              class="footer__scroll-to-top-img"
+              alt="Arrow up"
+            />
+          </button>
+
+          <hr class="footer__separator separator separator--footer" />
+
+          <ul class="footer__nav nav nav--footer">
+            <li class="footer__nav-item">
+              <a
+                href="#gallery"
+                class="footer__nav-link"
+              >
+                Галерея
+              </a>
+            </li>
+            <li class="footer__nav-item">
+              <a
+                href="#performances"
+                class="footer__nav-link"
+              >
+                Виставки та події
+              </a>
+            </li>
+            <li class="footer__nav-item">
+              <a
+                href="#about-us"
+                class="footer__nav-link"
+              >
+                Про Нас
+              </a>
+            </li>
+            <li class="footer__nav-item">
+              <a
+                href="#contacts"
+                class="footer__nav-link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__rights-container">
+          <p class="footer__designed">Designed by Zhyriada Marina</p>
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
