--- a/src/index.html
+++ b/src/index.html
@@ -367,7 +367,7 @@
 
             <div class="footer__icons">
               <a
-                href="https://www.linkedin.com/in/volodimir-murskyi-b54b45293/"
+                href="https://www.facebook.com/namu.museum/"
                 target="_blank"
               >
                 <img
@@ -377,7 +377,7 @@
                 />
               </a>
               <a
-                href="https://github.com/mrsvolodya?tab=repositories"
+                href="https://www.instagram.com/namu.museum/"
                 target="_blank"
               >
                 <img
