--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
         <div class="subscription__content">
           <h2 class="subscription__title">Підписка</h2>
           <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
-          <form class="subscription__form" action="#">
+          <form action="https://example.com/form-handler" method="POST" target="hidden_iframe" onsubmit="submitted=true; this.reset();">
             <div class="subscription__input-wrapper">
               <input class="subscription__input" placeholder="E-mail" type="email" name="email" required>
               <div class="subscription__button-wrapper">
@@ -177,6 +177,7 @@
               </div>
             </div>
           </form>
+          <iframe name="hidden_iframe" style="display:none;"></iframe>
         </div>
       </section>
     </main>
@@ -185,10 +186,10 @@
       <div class="container">
         <div class="footer__container">
           <div class="footer__icons">
-            <img src="./images/logo/logo.png" class="footer__logo">
+            <img src="./images/logo/logo.png" class="footer__logo" alt="Logo">
             <div class="footer__social-icons">
-              <a href="#" class="footer__icon footer__icon-facebook"></a>
-              <a href="#" class="footer__icon footer__icon-instagram"></a>
+              <a href="https://www.facebook.com/yourprofile" class="footer__icon footer__icon-facebook" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://www.instagram.com/yourprofile" class="footer__icon footer__icon-instagram" target="_blank" rel="noopener noreferrer"></a>
             </div>
           </div>
           <div class="footer-schedule">
