add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -188,8 +188,8 @@
           <div class="footer__icons">
             <img src="./images/logo/logo.png" class="footer__logo" alt="Logo">
             <div class="footer__social-icons">
-              <a href="https://www.facebook.com/yourprofile" class="footer__icon footer__icon-facebook" target="_blank" rel="noopener noreferrer"></a>
-              <a href="https://www.instagram.com/yourprofile" class="footer__icon footer__icon-instagram" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://www.facebook.com" class="footer__icon footer__icon-facebook" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://www.instagram.com" class="footer__icon footer__icon-instagram" target="_blank" rel="noopener noreferrer"></a>
             </div>
           </div>
           <div class="footer-schedule">
