--- a/src/index.html
+++ b/src/index.html
@@ -21,33 +21,34 @@
   </head>
 
   <body>
-    <header
-      class="page__left-padding page__section-space page__header-space-for-mobile header"
-    >
-      <div class="header__container">
+    <header class="page__section-space page__header-space-for-mobile header">
+
+      <div class="header__flex-box">
         <a
-          href="#menu"
-          class="icon icon__block icon--menu"
-        ></a>
+        href="#menu"
+        class="icon icon__block icon--menu"
+      ></a>
+        <div class="header__container">
 
-        <div class="header__l-container">
-          <h1 class="header__title">Художній музей</h1>
+          <div class="header__l-container">
+            <h1 class="header__title">Художній музей</h1>
 
-          <div class="header__t-container">
-            <button class="header__t-button">
-              <span class="header__t-text">Квитки</span>
-              <span class="header__t-show">
-                <img
-                  src="./images/icon/arrow.svg"
-                  alt="Arrow right"
-                />
-              </span>
-            </button>
-          </div>
+            <div class="header__t-container">
+              <button class="header__t-button">
+                <span class="header__t-text">Квитки</span>
+                <span class="header__t-show">
+                  <img
+                    src="./images/icon/arrow.svg"
+                    alt="Arrow right"
+                  />
+                </span>
+              </button>
+            </div>
 
-          <div class="header__e-container">
-            <span class="header__e-line"></span>
-            <p class="header__e-text">події</p>
+            <div class="header__e-container">
+              <span class="header__e-line"></span>
+              <p class="header__e-text">події</p>
+            </div>
           </div>
         </div>
 
@@ -58,7 +59,9 @@
             MU
           </h1>
         </div>
+
       </div>
+
     </header>
     <aside
       class="page__menu menu"
